--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:requestLegacyExternalStorage="true"
         android:name="io.flutter.app.FlutterApplication"
-        android:label="face_example"
+        android:label="人脸Demo"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
